* Improved seasonal changes
* Improved faction relations
* Improved faction, egg & structure colors
* Improved russian translation
* Improved trade entries
* Improved Shadow Wasteland
* Improved season changes in mountains (added attitude zones)
* Improved chest contents and trade entries
* Improved the gate connection algorithm
* Improved armor textures
* Improved unit price balance

* Fixed bug with asshai chandeliers
* Fixed bug with mob weapons
* Fixed bug with Yeen and Asshai weather
* Fixed bug with hostile mob spawning
* Fixed crush caused by unsmelting results in NEI
* Fixed jukeboxes not being classified under the 'Containers' banner permission
* Fixed the chisel text color algorithm failing for blocks with connected textures
* Fixed chisel text color not respecting resource pack reloads
* Fixed oddment collectors' smithing mischief being able to alter the formatting codes in an item name
* Fixed being able to open mob spawner chests in ruins and bypass the mob spawn by right-clicking the chest with a pouch
* Fixed bug with flicking sky in barrows
* Fixed bug with wraiths' lightning bolts
* Fixed bug with aramant, fotinia, flax, fern and plantain generation
* Fixed bug with saplings
* Fixed bug with mount armor
* Fixed bug with russian translation
* Fixed bug with aramant
* Fixed bug with shields/capes GUI
* Fixed bug with Ibben villages

- Removed Shadow Wasteland
- Removed Ghiscar Captain
- Removed Ironborn Corsair
- Removed levyman riders from units

>>VERSION 17.4
+ ADDED SEASONS
+ Added new money system
+ Added new banners
+ Added brooches
+ Added walking stick
+ Added westeros goldsmithes
+ Added NEI Integrator for all mod's recipes. Now you don't need GOT NEI Handler, everything is built-in.
+ Added partial compatibility with LOTR Mod
+ Added full compatibility with Weather 2
+ Added new Banner Protection settings
+ Added thiefs and their quest.
+ Added new anvil mechanic (engraving)
+ Added Yi Ti capes
+ Added Cloak of the Royal Guard